kubernetes/myapp/service.yml
apiVersion: v1
kind: Service
metadata: 
  name: myservice
  namespace: default
spec: 
  ports:
  - port: 80
    targetPort: 5173
  selector:
    appname: myapp
  type: LoadBalancer
