kubernetes/myapp/simplifiedingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: debug-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: store-front
            port:
              number: 80
      - path: /home
        pathType: Prefix
        backend:
          service:
            name: myservice
            port:
              number: 80
